# HW-of-SLAMBOOK2

./: README.md
hw10/ceres_example/: CMakeLists.txt  p3_Ceres.cpp  result_Ceres.g2o
hw10/ceres_example/common/: read_g2o.h
hw10/p3/: CMakeLists.txt  p3.cpp  result.g2o
hw11/p1/: PR_plot.m
hw11/p2/: CMakeLists.txt  groundtruth.txt  loop_closure_cal.cpp
hw11/p3/: CMakeLists.txt  feature_training.cpp  loop_closure.cpp
hw12/inverse_depth/: CMakeLists.txt  inverse_depth_mapping.cpp
hw12/semi_dense_mono/: CMakeLists.txt  semi_dense_mapping.cpp
hw3/: CMakeLists.txt  p5.cpp  p6.cpp
hw3/.kdev4/: hw3.kdev4
hw6/: CMakeLists.txt  ceresCurveFitting.cpp  g2oCurveFitting.cpp
hw6/.kdev4/: hw6.kdev4
hw7/: .p7.cpp.kate-swp  CMakeLists.txt  p10ICP.cpp  p10PnP.cpp  p2.cpp  p6.cpp  p7.cpp  p8.cpp
hw7/.kdev4/: hw7.kdev4
hw8/: CMakeLists.txt  p3.cpp  p4_Ceres_direct_method.cpp  p4_g2o_direct_method.cpp
hw9/: CMakeLists.txt  hw9.kdev4  p3.cpp
hw9/.kdev4/: hw9.kdev4
hw9/p3/: CMakeLists.txt
hw9/p3/.kdev4/: p3.kdev4
hw9/p6/: CMakeLists.txt  DataProcessing.cpp  SnavelyReprojectionError.h  common.cpp  common.h  p6_Ceres_completed.cpp  p6_g2o_completed.cpp  problem.txt
hw9/p6/.kdev4/: p6.kdev4
